@@ -1,32 +1,29 @@
 # IM System — 轻量级即时通讯系统
 
-基于 Netty 的纯 Java 即时通讯系统，支持 TCP + WebSocket 双协议接入，面向单机开发与集群扩展设计。
+基于 Netty 的纯 Java 即时通讯系统，支持 WebSocket + HTTP REST 接入，面向单机开发与集群扩展设计。
 
 ## 项目结构
 
 ```
 im-system/
 ├── im-api/         接口定义层（15+ 接口 + DTO + 枚举）
-├── im-codec/       协议编解码层（TCP 二进制协议）
 ├── im-core/        核心实现层（35+ 实现类 + Handler）
 ├── im-bootstrap/   启动引导层（Netty ServerBootstrap）
-├── im-client/      客户端 SDK + QuickStart 演示
 └── pom.xml         父 POM（模块聚合）
 ```
 
 ### 模块依赖
 
 ```
-im-bootstrap → im-core → im-codec → im-api
-                    ↘ im-client ↗
+im-bootstrap → im-core → im-api
 ```
 
 ## 技术栈
 
 | 组件 | 技术选型 |
 |------|---------|
-| 网络层 | Netty 4.2 (TCP 8080 + WebSocket 8081) |
-| 序列化 | 自定义二进制协议 + JSON (Jackson) |
+| 网络层 | Netty 4.2 (WebSocket + HTTP REST) |
+| 序列化 | JSON (Jackson) |
 | 认证 | HMAC-SHA256 自签 Token（不依赖外部 JWT 库） |
 | 消息队列 | MemoryMQ（可替换为 Kafka/RocketMQ/Pulsar） |
 | 缓存 | ConcurrentHashCache（可替换为 Redis/ETCD） |
@@ -44,10 +41,7 @@ mvn clean package -DskipTests
 cd im-bootstrap
 java --enable-preview -jar target/im-bootstrap-1.0.0-SNAPSHOT.jar
 
-# 启动客户端（演示）
-cd im-client
-java --enable-preview -cp "$(mvn dependency:build-classpath -q):target/classes" \
-  com.im.client.QuickStart alice bob
+<!-- 客户端 SDK 已随 TCP 协议移除，Web 客户端开发中 -->
 ```
 
 或使用集成脚本：
@@ -59,7 +53,7 @@ bash run-test.sh
 ## 核心特性
 
 ### 已完成（Phase A ~ C）
-- [x] 双协议接入：TCP 8080 + WebSocket 8081
+- [x] WebSocket + HTTP REST 接入
 - [x] 用户认证：Token 签发/验证（HMAC-SHA256）
 - [x] 单聊消息收发 + ACK 确认
 - [x] 群聊消息收发 + 成员展开多播
@@ -86,17 +80,17 @@ bash run-test.sh
 ## 架构概述
 
 ```
-┌─────────────┐   ┌─────────────┐
-│  TCP Client  │   │ WS Client   │
-└──────┬───────┘   └──────┬──────┘
-       │                  │
-       ▼                  ▼
-┌─────────────────────────────────────┐
-│          Netty Server (8080/8081)   │
-│  ┌─────────────┐ ┌───────────────┐  │
-│  │ IMDecoder   │ │ WsIMDecoder   │  │
-│  └──────┬──────┘ └───────┬───────┘  │
-│         ▼                ▼           │
+┌──────────────┐   ┌────────────────┐
+│  WS Client   │   │ HTTP Client    │
+└──────┬───────┘   └───────┬────────┘
+       │                   │
+       ▼                   ▼
+┌──────────────────────────────────────┐
+│     Netty Server (WS/HTTP REST)     │
+│  ┌──────────────────────────────┐   │
+│  │  JsonWsCodec (JSON ↔ Cmd)   │   │
+│  └──────┬───────────────────────┘   │
+│         ▼                           │
 │  ┌────────────────────────────────┐  │
 │  │    MessageRouterHandler       │  │
 │  │  ├─ AuthInterceptor          │  │
@@ -122,37 +116,37 @@ bash run-test.sh
 
 ## 通信协议
 
-自定义 TCP 二进制协议：
+### WebSocket JSON 协议
 
-```
-┌─────────┬─────────┬──────────┬───────────────┐
-│ Magic   │ Version │ Body Len │  Body (JSON)  │
-│ (1 byte)│ (1 byte)│ (2 bytes)│  (variable)   │
-└─────────┴─────────┴──────────┴───────────────┘
-```
-
-- Magic: `0xCC`
-- Version: `0x01`
-- Body Len: 大端无符号 short
-- Body: JSON 编码的 IMCommand
-
-### IMCommand 结构
+客户端与服务端通过 WebSocket 发送 JSON 文本帧通信。帧格式为 IMCommand 的扁平 JSON 映射：
 
 ```json
 {
-  "_cmd": 1,
-  "_uid": "alice",
-  "headers": { "key": "value" },
-  "body": "base64-encoded bytes"
+  "_op": 1,        "_seq": 123,     "_mid": "uuid",
+  "_ts": 1234567890,                "_flg": 1,
+  "userId": "alice",  "token": "xxx",
+  "_ct": "text",
+  "_body": "eyJ0ZXh0IjoiaGVsbG8ifQ=="
 }
 ```
+
+| 字段 | 说明 |
+|------|------|
+| `_op` | 操作码（CommandType） |
+| `_seq` | 消息序号 |
+| `_mid` | 消息 ID |
+| `_ts` | 时间戳 |
+| `_flg` | 标志位（ACK 等） |
+| `_ct` | 内容类型（text/image/file 等） |
+| `_body` | 消息体（Base64 编码） |
+| 其它 | 自定义头（如 userId, token, key 等） |
 
 ## 测试
 
 ```bash
 mvn test
-# 75 个测试用例全部通过
-# im-api: 33, im-codec: 19, im-core: 23
+# 68 个测试用例全部通过
+# im-api: 33, im-core: 23, im-bootstrap: 12
 ```
 
 ## License
